--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "bootstrap": "^4.6.2",
+    "dotenv": "^16.3.1",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
