--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^10",
+    "css-loader": "^6.8.1",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
+    "postcss-loader": "^7.3.3",
     "tailwindcss": "^3"
   }
 }
