--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10",
