--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "next": "13.5.4",
     "react": "^18",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
