--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.2"
