--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10",
