--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.6.2",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
+    "jwt-decode": "^4.0.0",
     "next": "13.5.4",
     "react": "^18",
     "react-bootstrap": "^2.9.0",
