add messages realtime

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_API_URL = http://localhost:8080/users/
 NEXT_PUBLIC_SOCKET_SERVER = http://localhost:8080
-# NEXT_PUBLIC_BASE_URL = http://localhost:8080/
-NEXT_PUBLIC_BASE_URL = https://funifind.onrender.com/
+NEXT_PUBLIC_BASE_URL = http://localhost:8080/
+# NEXT_PUBLIC_BASE_URL = https://funifind.onrender.com/
